--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<h1>Hello world</h1>
+<h1>leosuying.github.io</h1>
+<a href="https://leosuying.github.io/build/index.html">[Solar Protocol Dashboard]</a>
